--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "jquery": "1.10.2",
     "underscore": ">=1.4.4",
+    "jquery-css3-ease": "1.0.0",
     "jquery-easing": "1.3.0",
-    "jquery-css3-ease": "1.0.0"
+    "jquery-transform": "~1.0",
+    "jquery-bez": "https://github.com/rdallasgray/bez.git" // ~1.0
   },
   "ignore": [
     "node_modules",
